--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -4,18 +4,16 @@
 #
 #    pip-compile requirements/requirements.in
 #
-alembic==1.11.1
+alembic==1.11.3
     # via flask-migrate
 blinker==1.6.2
     # via flask
-certifi==2023.5.7
+certifi==2023.7.22
     # via requests
-charset-normalizer==3.1.0
+charset-normalizer==3.2.0
     # via requests
-click==8.1.3
+click==8.1.7
     # via flask
-decorator==5.1.1
-    # via validators
 digital-land-frontend @ git+https://github.com/digital-land/digital-land-frontend.git
     # via -r requirements/requirements.in
 flask==2.3.2
@@ -35,11 +33,11 @@ flask-sslify==0.1.5
     # via -r requirements/requirements.in
 flask-wtf==1.1.1
     # via -r requirements/requirements.in
-govuk-frontend-jinja==2.6.0
+govuk-frontend-jinja==2.7.0
     # via digital-land-frontend
 greenlet==2.0.2
     # via sqlalchemy
-gunicorn==20.1.0
+gunicorn==21.2.0
     # via -r requirements/requirements.in
 idna==3.4
     # via requests
@@ -59,13 +57,19 @@ markupsafe==2.1.3
     #   mako
     #   werkzeug
     #   wtforms
-psycopg2-binary==2.9.6
+packaging==23.1
+    # via gunicorn
+psycopg2-binary==2.9.7
     # via -r requirements/requirements.in
 python-dotenv==1.0.0
     # via -r requirements/requirements.in
+python-frontmatter==1.0.0
+    # via -r requirements/requirements.in
+pyyaml==6.0.1
+    # via python-frontmatter
 requests==2.31.0
     # via -r requirements/requirements.in
-sqlalchemy==2.0.17
+sqlalchemy==2.0.20
     # via
     #   alembic
     #   flask-sqlalchemy
@@ -73,14 +77,11 @@ typing-extensions==4.7.1
     # via
     #   alembic
     #   sqlalchemy
-urllib3==2.0.3
+urllib3==2.0.4
     # via requests
-validators==0.20.0
+validators==0.21.2
     # via digital-land-frontend
-werkzeug==2.3.6
+werkzeug==2.3.7
     # via flask
 wtforms==3.0.1
     # via flask-wtf
-
-# The following packages are considered to be unsafe in a requirements file:
-# setuptools
