--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -48,6 +48,8 @@ flask-wtf==1.1.1
     # via -r requirements/requirements.in
 govuk-frontend-jinja==2.7.0
     # via digital-land-frontend
+greenlet==2.0.2
+    # via sqlalchemy
 gunicorn==21.2.0
     # via -r requirements/requirements.in
 idna==3.4
