Adds images to correct location

--- a/digital-land-frontend.config.json
+++ b/digital-land-frontend.config.json
@@ -2,5 +2,7 @@
   "scssPath": "./src/scss",
   "jsOutputPath": "application/static/javascripts",
   "stylesheetsOutputPath": "application/static/stylesheets",
-  "watchPaths": "'./src/scss/**/*.scss' './src/javascripts/**/*.js'"
+  "watchPaths": "'./src/scss/**/*.scss' './src/javascripts/**/*.js'",
+  "imagesOutputPath": "static/images",
+  "govukOutputPath": "static/govuk"
 }
