--- a/digital-land-frontend.config.json
+++ b/digital-land-frontend.config.json
@@ -3,6 +3,6 @@
   "jsOutputPath": "application/static/javascripts",
   "stylesheetsOutputPath": "application/static/stylesheets",
   "watchPaths": "'./src/scss/**/*.scss' './src/javascripts/**/*.js'",
-  "imagesOutputPath": "static/images",
-  "govukOutputPath": "static/govuk"
+  "imagesOutputPath": "application/static/images",
+  "govukOutputPath": "application/static"
 }
