--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -4,7 +4,7 @@
 #
 #    pip-compile requirements/requirements.in
 #
-alembic==1.11.3
+alembic==1.12.0
     # via flask-migrate
 authlib==1.2.1
     # via -r requirements/requirements.in
@@ -12,8 +12,11 @@ blinker==1.6.2
     # via
     #   flask
     #   flask-debugtoolbar
+    #   sentry-sdk
 certifi==2023.7.22
-    # via requests
+    # via
+    #   requests
+    #   sentry-sdk
 cffi==1.15.1
     # via cryptography
 charset-normalizer==3.2.0
@@ -32,11 +35,12 @@ flask==2.3.3
     #   flask-sqlalchemy
     #   flask-sslify
     #   flask-wtf
+    #   sentry-sdk
 flask-debugtoolbar==0.13.1
     # via -r requirements/requirements.in
-flask-migrate==4.0.4
+flask-migrate==4.0.5
     # via -r requirements/requirements.in
-flask-sqlalchemy==3.0.5
+flask-sqlalchemy==3.1.1
     # via
     #   -r requirements/requirements.in
     #   flask-migrate
@@ -71,6 +75,7 @@ markupsafe==2.1.3
     # via
     #   jinja2
     #   mako
+    #   sentry-sdk
     #   werkzeug
     #   wtforms
 packaging==23.1
@@ -87,17 +92,21 @@ pyyaml==6.0.1
     # via python-frontmatter
 requests==2.31.0
     # via -r requirements/requirements.in
-sqlalchemy==2.0.20
+sentry-sdk[flask]==1.31.0
+    # via -r requirements/requirements.in
+sqlalchemy==2.0.21
     # via
     #   alembic
     #   flask-sqlalchemy
-typing-extensions==4.7.1
+typing-extensions==4.8.0
     # via
     #   alembic
     #   sqlalchemy
 urllib3==2.0.4
-    # via requests
-validators==0.21.2
+    # via
+    #   requests
+    #   sentry-sdk
+validators==0.22.0
     # via digital-land-frontend
 werkzeug==2.3.7
     # via
