Remove debug toolbar, not compatible with flask 3 yet.
Fix bug where csrt_token was saved in record data.

--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -52,6 +52,8 @@ flask-wtf==1.1.1
     # via -r requirements/requirements.in
 govuk-frontend-jinja==2.7.0
     # via digital-land-frontend
+greenlet==3.0.0
+    # via sqlalchemy
 gunicorn==21.2.0
     # via -r requirements/requirements.in
 idna==3.4
