--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -5,7 +5,11 @@
 #    pip-compile requirements/requirements.in
 #
 alembic==1.13.1
-    # via flask-migrate
+    # via
+    #   alembic-postgresql-enum
+    #   flask-migrate
+alembic-postgresql-enum==1.1.2
+    # via -r requirements/requirements.in
 authlib==1.3.0
     # via -r requirements/requirements.in
 blinker==1.7.0
@@ -126,6 +130,7 @@ sentry-sdk[flask]==1.40.4
 sqlalchemy==2.0.26
     # via
     #   alembic
+    #   alembic-postgresql-enum
     #   flask-sqlalchemy
 typing-extensions==4.9.0
     # via
