--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -71,8 +71,6 @@ govuk-frontend-jinja==3.0.0
     #   govuk-frontend-wtf
 govuk-frontend-wtf==2.5.0
     # via -r requirements/requirements.in
-greenlet==3.0.3
-    # via sqlalchemy
 gunicorn==21.2.0
     # via -r requirements/requirements.in
 idna==3.6
@@ -110,9 +108,7 @@ pycparser==2.21
 pygithub==2.2.0
     # via -r requirements/requirements.in
 pyjwt[crypto]==2.8.0
-    # via
-    #   pygithub
-    #   pyjwt
+    # via pygithub
 pynacl==1.5.0
     # via pygithub
 python-dotenv==1.0.1
