--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -4,42 +4,39 @@
 #
 #    pip-compile requirements/requirements.in
 #
-alembic==1.13.1
+alembic==1.18.4
     # via
     #   alembic-postgresql-enum
     #   flask-migrate
-alembic-postgresql-enum==1.1.2
+alembic-postgresql-enum==1.9.0
     # via -r requirements/requirements.in
-authlib==1.3.0
+authlib==1.6.8
     # via -r requirements/requirements.in
-blinker==1.7.0
+blinker==1.9.0
     # via
     #   flask
-    #   flask-debugtoolbar
     #   sentry-sdk
-certifi==2024.2.2
+certifi==2026.1.4
     # via
     #   requests
     #   sentry-sdk
-cffi==1.16.0
+cffi==2.0.0
     # via
     #   cryptography
     #   pynacl
-charset-normalizer==3.3.2
+charset-normalizer==3.4.4
     # via requests
-click==8.1.7
+click==8.3.1
     # via flask
-cryptography==42.0.2
+cryptography==46.0.5
     # via
     #   authlib
     #   pyjwt
-deepmerge==1.1.1
+deepmerge==2.0
     # via govuk-frontend-wtf
-deprecated==1.2.14
-    # via pygithub
 digital-land-frontend @ git+https://github.com/digital-land/digital-land-frontend.git
     # via -r requirements/requirements.in
-flask==3.0.2
+flask==3.1.3
     # via
     #   -r requirements/requirements.in
     #   flask-debugtoolbar
@@ -49,9 +46,9 @@ flask==3.0.2
     #   flask-wtf
     #   govuk-frontend-wtf
     #   sentry-sdk
-flask-debugtoolbar==0.14.1
+flask-debugtoolbar==0.16.0
     # via -r requirements/requirements.in
-flask-migrate==4.0.5
+flask-migrate==4.1.0
     # via -r requirements/requirements.in
 flask-sqlalchemy==3.1.1
     # via
@@ -61,92 +58,90 @@ flask-sslify==0.1.5
     # via -r requirements/requirements.in
 flask-talisman==1.1.0
     # via -r requirements/requirements.in
-flask-wtf==1.2.1
+flask-wtf==1.2.2
     # via
     #   -r requirements/requirements.in
     #   govuk-frontend-wtf
-govuk-frontend-jinja==3.0.0
+govuk-frontend-jinja==4.0.0
     # via
     #   digital-land-frontend
     #   govuk-frontend-wtf
-govuk-frontend-wtf==2.5.0
+govuk-frontend-wtf==3.2.0
     # via -r requirements/requirements.in
-gunicorn==21.2.0
+greenlet==3.3.1
+    # via sqlalchemy
+gunicorn==25.1.0
     # via -r requirements/requirements.in
-idna==3.6
+idna==3.11
     # via requests
 is-safe-url==1.0
     # via -r requirements/requirements.in
-itsdangerous==2.1.2
+itsdangerous==2.2.0
     # via
     #   flask
-    #   flask-debugtoolbar
     #   flask-wtf
-jinja2==3.1.3
+jinja2==3.1.6
     # via
     #   flask
     #   govuk-frontend-jinja
     #   govuk-frontend-wtf
-mako==1.3.2
+mako==1.3.10
     # via alembic
-markupsafe==2.1.5
+markupsafe==3.0.3
     # via
-    #   flask-debugtoolbar
+    #   flask
     #   jinja2
     #   mako
     #   sentry-sdk
     #   werkzeug
     #   wtforms
-packaging==23.2
-    # via
-    #   flask-debugtoolbar
-    #   gunicorn
-psycopg2-binary==2.9.9
+packaging==26.0
+    # via gunicorn
+psycopg2-binary==2.9.11
     # via -r requirements/requirements.in
-pycparser==2.21
+pycparser==3.0
     # via cffi
-pygithub==2.2.0
+pygithub==2.8.1
     # via -r requirements/requirements.in
-pyjwt[crypto]==2.8.0
+pyjwt[crypto]==2.11.0
     # via pygithub
-pynacl==1.5.0
+pynacl==1.6.2
     # via pygithub
-python-dotenv==1.0.1
+python-dotenv==1.2.1
     # via -r requirements/requirements.in
 python-frontmatter==1.1.0
     # via -r requirements/requirements.in
-pyyaml==6.0.1
+pyyaml==6.0.3
     # via python-frontmatter
-requests==2.31.0
+requests==2.32.5
     # via
     #   -r requirements/requirements.in
     #   pygithub
-sentry-sdk[flask]==1.40.4
+sentry-sdk[flask]==2.53.0
     # via -r requirements/requirements.in
-sqlalchemy==2.0.26
+sqlalchemy==2.0.46
     # via
     #   alembic
     #   alembic-postgresql-enum
     #   flask-sqlalchemy
-typing-extensions==4.9.0
+tomli==2.4.0
+    # via alembic
+typing-extensions==4.15.0
     # via
     #   alembic
+    #   cryptography
     #   pygithub
     #   sqlalchemy
-urllib3==2.2.0
+urllib3==2.6.3
     # via
     #   pygithub
     #   requests
     #   sentry-sdk
-validators==0.22.0
+validators==0.35.0
     # via digital-land-frontend
-werkzeug==3.0.1
-    # via
-    #   flask
-    #   flask-debugtoolbar
-wrapt==1.16.0
-    # via deprecated
-wtforms==3.1.2
+werkzeug==3.1.6
+    # via flask
+wtforms==3.2.1
     # via
     #   flask-wtf
     #   govuk-frontend-wtf
